force-app/main/default/objects/LogNTM__c/LogNTM__c.object-meta.xml
<CustomObject>
    <label>LogNTM</label>
    <nameField>
        <label>LogNTM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depuração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>