force-app/main/default/objects/LogNTM__c/fields/Lead_Recebidos__c.field-meta.xml
<CustomField>
    <fullName>Lead_Recebidos__c</fullName>
    <label>Lead_Recebidos</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>