force-app/main/default/objects/LogNTM__c/fields/Messagem__c.field-meta.xml
<CustomField>
    <fullName>Messagem__c</fullName>
    <label>Messagem</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>