force-app/main/default/objects/LogNTM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Email__c</columns>
    <columns>Messagem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>